added mavenLocal target